--- a/src/app/pages/config-page/config-page.component.html
+++ b/src/app/pages/config-page/config-page.component.html
@@ -15,17 +15,17 @@
             <div>{{'header.title' | translate}}</div>
             <mat-radio-group  [(ngModel)]="Lang" >
                 <div class="cat">
-                    <img src="../../../assets/img/depositphotos_23583257-stock-photo-catalan-flag.jpg" style=" background-image: url(../../../assets/img/depositphotos_23583257-stock-photo-catalan-flag.jpg);" alt="image">
+                    <img src="assets/img/depositphotos_23583257-stock-photo-catalan-flag.jpg" style=" background-image: url(../../../assets/img/depositphotos_23583257-stock-photo-catalan-flag.jpg);" alt="image">
                     <mat-radio-button value="1" (click)="useLanguage('cat')">Cat</mat-radio-button>
 
                 </div>
                 <div class="cast">
-                    <img src="../../../assets/img/espanya.jpg" alt="image"  style=" background-image: url(../../../assets/img/espanya.jpg);">
+                    <img src="assets/img/espanya.jpg" alt="image"  style=" background-image: url(../../../assets/img/espanya.jpg);">
                     <mat-radio-button value="2">Esp</mat-radio-button>
 
                 </div>
                 <div class="en">
-                    <img src="../../../assets/img/english.jpg" alt="image" style=" background-image: url(../../../assets/img/english.jpg);">
+                    <img src="assets/img/english.jpg" alt="image" style=" background-image: url(../../../assets/img/english.jpg);">
                     <mat-radio-button value="3" (click)="useLanguage('en')">Eng</mat-radio-button>
 
                 </div>
