--- a/src/app/pages/recomended/recomended.component.css
+++ b/src/app/pages/recomended/recomended.component.css
@@ -150,4 +150,14 @@ mat-tab-group{
     height: 100%;
 
 }
-
+mat-tab-group{
+    background-color: #FF8C00;
+  }
+  
+  mat-button-toggle{
+    background-color: #FF8C00;
+  }
+  .mat-button-toggle-button {
+    background-color: #FF8C00;
+  
+  }
