--- a/src/app/pages/config-page/config-page.component.html
+++ b/src/app/pages/config-page/config-page.component.html
@@ -37,7 +37,7 @@
         [rowspan]="2"
         >
         <div class="log_out">
-            <button class="log_out_btt" mat-raised-button (click)="logout()" >Log out</button>
+            <button class="log_out_btt" mat-raised-button (click)="logout()" >{{'logout' | translate}}</button>
         </div>
     </mat-grid-tile>
     <mat-grid-tile
