--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -35,7 +35,7 @@
                     </mat-error>
                   </mat-form-field>
               </form>
-              <button mat-raised-button class="loginbtt" (click)="logIn()">Login</button>
+              <button mat-raised-button class="loginbtt" (click)="logIn()">{{'login' | translate}}</button>
               <div class="space_line">
                 <div class="space_line_1">
                     <mat-divider></mat-divider>
