--- a/src/app/pages/config-page/config-page.component.html
+++ b/src/app/pages/config-page/config-page.component.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="cast">
                     <img src="assets/img/espanya.jpg" alt="image"  style=" background-image: url(../../../assets/img/espanya.jpg);">
-                    <mat-radio-button value="2">Esp</mat-radio-button>
+                    <mat-radio-button value="2" (click)="useLanguage('esp')">Esp</mat-radio-button>
 
                 </div>
                 <div class="en">
