--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -22,7 +22,7 @@
     </mat-grid-tile>
 </mat-grid-list>
 
-<div class="content">   
+<div class="content" style=" padding-bottom: 50px;">   
     <mat-tab-group mat-align-tabs="center" [selectedIndex]="selectedIndex">
         <mat-tab label="{{'all' | translate}}" >
             <app-animals-grid></app-animals-grid>
@@ -39,6 +39,10 @@
         
     </mat-tab-group>
 </div>
+
+</div>
+
+<div >
 
 </div>
 
